# news-scraper

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  fitch_rating.py  reuters_forbes.py  weibo.py
