[tool.poetry]
name = "news-scraper"
version = "0.1.0"
description = "A news scraper for educational purposes"
authors = ["Ahram-41"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
drissionpage = "^3.0.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
lxml = "^4.6.0"
openpyxl = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
mypy = "^0.910"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "src.scraper:main"
